@@ -6,6 +6,10 @@ Gora Change Log
 
 trunk (current development)
 
+* GORA-203 Bug in setting column field attribute "qualifier" in CassandraMapping (rmarroquin, lewismc, kazk)
+
+* GORA-221 fix Cassandra configuration in gora-tutorial (lewismc)
+
 * GORA-211 thread safety: fix java.lang.NullPointerException - synchronize on mutator (rherget)
 
 * GORA-210 thread safety: fix java.util.ConcurrentModificationException (rherget)
